# ml-debug-rl-trainer

./: .gitignore  Dockerfile  README.md  RL_SYSTEM.md  app.py  app_diff.patch  debug_ids.py  debug_server.py  diff.txt  grader.py  inference.py  inference_output.txt  openenv.yaml  pyproject.toml  pytest_out.txt  requirements.txt  response.json  test_422_fix.py  test_out.txt  test_shield_payload.py  tmp.json  train_agent.py  train_contexts.txt  ui_train_search.txt  verify_grader_discovery.py  verify_master_floor.py  verify_schema.py  verify_score_guarantee.py  verify_sync.py  verify_token.py
.github/workflows/: sync_to_hf.yml
env/: __init__.py  environment.py  graders.py  models.py  rl_agent.py  tasks.py  tools.py
ml_env/: __init__.py  __main__.py  environment.py  graders.py  models.py  reward.py  tasks.py  tools.py
notebooks/: ML_Experiment_Debugger_Demo.ipynb
server/: app.py
tests/: test_env.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx
ui/src/components/: AIAdvisor.css  AIAdvisor.jsx  ActionForm.jsx  EpisodeSummary.jsx  LearningDashboard.jsx  LossCurveChart.jsx  RewardPanel.jsx  TaskPanel.jsx
