[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-experiment-debugger"
version = "2.3.0"
description = "RL environment where AI agents diagnose 6 real ML bugs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.7.4",
    "openai==1.40.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["ml_env"]
