[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-experiment-debugger"
version = "2.3.0"
description = "An RL environment where AI agents diagnose broken ML training runs through multi-step investigation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "AIverse"}
]
keywords = ["reinforcement-learning", "openenv-core", "ml-engineering", "debugging"]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.7.4",
    "openai>=1.40.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"
ml-debug-inference = "inference:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/12-vinit/ml-experiment-debugger"

[tool.hatch.build.targets.wheel]
packages = ["ml_env", "server"]
include = ["openenv.yaml", "inference.py"]
